# Findex

./: .gitignore  DOCKER_README.md  README.md  docker-compose.backend.yaml  docker-compose.yml  docs.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  archive_main.py  docker-compose.yaml  main.py  main_fastapi.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  archive_main.py  main.py
backend/app/agents/: __init__.py  agent.py  github.py  node_functions.py  webite.py  websearch.py  youtube.py
backend/app/core/: __init__.py  config.py  llm.py
backend/app/github_crawler/: __init__.py  convertor.py
backend/app/models/requests/: ask.py  crawller.py  subtitles.py  video_info.py  website.py
backend/app/models/response/: __init__.py
backend/app/prompts/: crawller.py  github.py  website.py  youtube.py
backend/app/routes/: __init__.py  ask.py  crawller.py  git_crawl.py  health.py  react_ask.py  subtitles.py  video_info.py  website.py
backend/app/webcrawler/: __init__.py  rag.py  search_agent.py
backend/app/youtube_utils/: extract_id.py  get_info.py
backend/core/: __init__.py  config.py
backend/models/requests/: __init__.py  subtitles.py
backend/routes/: ask.py  health.py  subtitles.py  video_info.py
backend/webcrawler/: __init__.py  html_md.py  request_md.py  search_agent.py
backend/youtube_agent/: extract_id.py  get_info.py
backend/youtube_utils/: get_info.py  get_subs.py
extension/: FIXED_FIND_README.md  background.js  fixed-find-tool.js  index.html  manifest.json  package-lock.json  package.json  test-external-search.html  test-find-in-page.html  test-find-toolbar.html  test-fixed-find.html  test-main-page-find.html  test-page-search.html  test-search.html  test-sidebar.html
extension/content-scripts/: fixed-find-injector.js  inject-sidebar.js  page-search.js
extension/find-in-page/: find-in-page.html  find-in-page.js
extension/find-toolbar/: find-toolbar.html  find-toolbar.js
extension/options/: options.html  options.js
extension/search-overlay/: search-overlay.html  search-overlay.js
extension/sidebar/: sidebar.html  sidebar.js
extension/src/: App.jsx
landing_page/: package.json  tsconfig.json
landing_page/@types/: minimatch.d.ts
landing_page/app/: globals.css  layout.tsx  page.tsx
landing_page/components/: Demo.tsx  Hero.tsx  (+10 more)
(+34 files in other folders)
