[project]
name = "findex_backend"
version = "0.1.0"
description = "GenAI - langchain backend"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.6",
    "html2text>=2024.2.26",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
    "yt-dlp>=2025.6.30",
]
