[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "findex_backend"
version = "0.1.0"
description = "GenAI - langchain backend"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.6",
    "html2text>=2024.2.26",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
    "yt-dlp>=2025.6.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
findex-backend = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/findex"
Repository = "https://github.com/yourusername/findex"
Issues = "https://github.com/yourusername/findex/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "__pycache__*"]
